feat: generate dbt tests using datapilot (#955)
* feat: add tests section in doc editor

* fix: add storybook sample data

* fix: add test UI implementation

* feat: fill model and columns dropdown for relationship matching

* fix: save tests in schema

* feat: show test details on click

* fix: edit test values

* chore: tests ui fixes

* fix: ui issues in right side panel for tests

* fix: minor issues

* fix: tooltip refactor

* fix: update tests in ui after user change data

* fix: minor issues

* fix: functional issues

* fix: cleanup

* fix: save flow for tests

* fix: markdown for code test

* chore: code cleanup

* fix: merge issues

* chore: clear duplicate tests

* chore: cleanup drawer implementation

* chore: rename functions

* fix: review comments

* feat: add config to enable tests

* fix: minor issues

* fix: relationship update issue

* fix: ui issues

* feat: add custom test option

* chore: temporary changes

* chore: edit flow update

* fix: edit/delete implementation

* fix: minor ui issues

* chore: refactor datapilot chat

* feat: working dbt custom test

* fix: new tests flow

* chore: cleanup unnecessary files

* fix: cleanup for new ui changes

* fix: for e2e tests

* fix: ui review comments

* fix: ui issues

* fix: show buttons on add

* fix: updated UI for add tests flow

* fix: accepted values interaction

* fix: for review comments

* improve: dbtprojectservice

* fix: accepted values save

* fix: duplicate interface name

* chore: clear button for accepted value

* fix: show max 3 tests by default

* fix: rename dbtprojectservice

* fix: minor UI issues

* feat: get distinct column values

* fix: error handling

* fix: insert generated test

* fix: for review comments

* fix: carry forward unknown test config

* fix: show error msg with contact us link

* fix: remove feature flag for tests

* fix: handle relationships wi

--- a/webview_panels/src/modules/documentationEditor/styles.module.scss
+++ b/webview_panels/src/modules/documentationEditor/styles.module.scss
@@ -15,7 +15,40 @@
       color: var(--text-color--title)
     }
   }
+  .custom-test{
+    display: inline-flex;
+    width: auto;
+    justify-content: space-between;
+    align-items: center;
+    color: var(--bs-btn-color);
+    gap: 4px;
+    :global .btn{
+      padding: 0 3px;
+    }
+
+    & svg path {
+      fill: var(--primary-color);
+    }
+    & span{
+      height: 18px;
+      line-height: 0.9;
+      background: var(--action-beta);
+
+      &:hover {
+      background: var(--action-beta);
+      border-color: transparent;
+      }
+    }
+  }
   .entity-tests {
+    .tests-row{
+      > *,
+      > span > span {
+        margin-right: 0.5rem;
+        margin-bottom: 0.5rem;
+        display: inline-block;
+      }
+    }
     margin-top: var(--spacing-lg);
     p {
       margin-bottom: 0;
@@ -220,6 +253,26 @@
         opacity: 0.3;
       }
     }
+    :global .btn-primary{
+      background-color: var(--primary-color);
+
+      }
+      
+  }
+
+  :global .card-title {
+    border: none;
+    margin: 0;
+    font-weight: 400;
+    margin-bottom: 1rem;
+    padding-bottom: 0;
+  }
+
+  :global .card-body {
+  }
+
+  :global .card-footer {
+    border: none;
   }
 
   :global .card-title {
