fix: as per comments

--- a/webview_panels/src/modules/healthCheck/healthcheck.module.scss
+++ b/webview_panels/src/modules/healthCheck/healthcheck.module.scss
@@ -2,7 +2,7 @@
   width: 60vw;
 }
 
-.accordion {
+.accordionContainer {
   background-color: var(--background--01);
   border-radius: 0.25em;
   padding: 0.25em 0.5em;
