--- a/webview_panels/src/main.scss
+++ b/webview_panels/src/main.scss
@@ -101,6 +101,18 @@ strong {
   gap: 0.5rem;
 }
 
+.gap-md {
+  gap: 0.75rem;
+}
+
+.gap-lg {
+  gap: 1rem;
+}
+
+.gap-xl {
+  gap: 1.5rem;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
