fix: disabled start scan

--- a/webview_panels/src/main.scss
+++ b/webview_panels/src/main.scss
@@ -158,3 +158,9 @@ code {
 .lines-3 {
   @include lines(3);
 }
+
+.text-overflow {
+  text-overflow: ellipsis;
+  overflow-x: hidden;
+  white-space: nowrap;
+}
