fix: actions manifest ui ai-1652

--- a/webview_panels/src/modules/defer/defer.module.scss
+++ b/webview_panels/src/modules/defer/defer.module.scss
@@ -39,10 +39,11 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      gap:10px;
     }
 
     .path-input{
-      width: 70%;
+      max-width: 70%;
       cursor: pointer;
     }
 
