fix: ui styling

--- a/webview_panels/src/modules/queryPanel/querypanel.module.scss
+++ b/webview_panels/src/modules/queryPanel/querypanel.module.scss
@@ -8,4 +8,22 @@
     padding: 0.5rem;
     display: flex;
     flex-direction: column;
+
+    :global .nav-link{
+      cursor: pointer;
+      border-bottom: 2px solid transparent;
+      color: var(--text-color--title);
+
+      &:global.active{
+        border-bottom: 2px solid var(--text-color--title);
+      }
+    }
+
+    .loader{
+      justify-content: center;
+      align-items: center;
+      img {
+        width: 10rem;
+      }
+    }
 }
