--- a/webview_panels/src/modules/queryPanel/components/perspective/perspective.module.scss
+++ b/webview_panels/src/modules/queryPanel/components/perspective/perspective.module.scss
@@ -3,4 +3,7 @@
   font-size: 1rem !important;
   font-family: var(--bs-body-font-family) !important;  
   width: auto;
+  --plugin--background: var(--background--base);
+  --icon--color: var(--text-color--paragraph) !important;
+  color: var(--text-color--paragraph) !important;
 }
