--- a/webview_panels/src/modules/queryPanel/components/perspective/perspective.scss
+++ b/webview_panels/src/modules/queryPanel/components/perspective/perspective.scss
@@ -1,4 +1,7 @@
 regular-table{
+  th,td {
+    color: var(--text-color--paragraph) !important;
+  }
 tbody {
     tr:nth-child(even) {
       background-color: rgb(239, 239, 239);
@@ -6,10 +9,7 @@ tbody {
     tr:hover {
       background-color: rgb(187, 187, 187);
       cursor: pointer;
-    }
-    td {
-      color: var(--text-color--paragraph) !important;
-    }
+    }    
   }
 }
 
