fix: query panel fixes

--- a/webview_panels/src/modules/queryPanel/components/perspective/perspective.module.scss
+++ b/webview_panels/src/modules/queryPanel/components/perspective/perspective.module.scss
@@ -7,3 +7,6 @@
   --icon--color: var(--text-color--paragraph) !important;
   color: var(--text-color--paragraph) !important;
 }
+perspective-export-menu {
+  display: none;
+}
