fix: code cleanup

--- a/webview_panels/src/modules/queryPanel/components/perspective/perspective.scss
+++ b/webview_panels/src/modules/queryPanel/components/perspective/perspective.scss
@@ -1,36 +1,41 @@
-regular-table{
+regular-table {
   th {
     font-weight: 800 !important;
   }
-  th,td {
+
+  th,
+  td {
     font-size: 13px !important;
   }
+
   tbody tr::after,
-  thead tr:last-child::after{
+  thead tr:last-child::after {
     width: 0px !important;
   }
-tbody {
+
+  tbody {
     tr:nth-child(even) {
       background-color: rgb(239, 239, 239);
     }
+
     tr:hover {
       background-color: rgb(187, 187, 187);
       cursor: pointer;
-    }    
+    }
   }
 
   perspective-export-menu {
     display: none;
   }
-  
+
   .psp-align-left {
     border-left: solid 1px var(--inactive--border-color, #8b868045);
   }
-  
+
   .psp-align-right {
     border-left: solid 1px var(--inactive--border-color, #8b868045);
   }
-  
+
   .psp-header-leaf:first-child {
     border-left-color: transparent;
   }
@@ -41,6 +46,7 @@ regular-table[theme="dark"] {
     tr:nth-child(even) {
       background-color: var(--background--03);
     }
+
     tr:hover {
       background-color: var(--background--01);
     }
