--- a/webview_panels/src/modules/queryPanel/components/perspective/perspective.scss
+++ b/webview_panels/src/modules/queryPanel/components/perspective/perspective.scss
@@ -1,6 +1,19 @@
 regular-table {
   th {
     font-weight: 800 !important;
+    background-color: #222;
+    color: #fff;
+    padding-bottom: 6px !important;
+    border-bottom: 3px solid #3fb449 !important;
+    padding-top: 4px !important;
+  }
+
+  &[theme="dark"]{
+  th {
+    background-color: #fff;
+    color: #222;
+    
+  }
   }
 
   th,
@@ -14,13 +27,29 @@ regular-table {
   }
 
   tbody {
+    td{
+      padding-top: 3px !important;
+      padding-bottom: 3px !important;
+    }
     tr:nth-child(even) {
       background-color: rgb(239, 239, 239);
+    }
+
+    tr:last-child td{
+      border-bottom: 1px solid var(--inactive--border-color);
     }
 
     tr:hover {
       background-color: rgb(187, 187, 187);
       cursor: pointer;
+    }
+
+    td:first-child{
+      border-left-color: var(--inactive--border-color) !important;
+    }
+    td:last-child{
+      border-right-color: var(--inactive--border-color) !important;
+      border-right-width: 1px !important;
     }
   }
 
