--- a/query_panel/style.css
+++ b/query_panel/style.css
@@ -147,3 +147,19 @@ th {
 regular-table::-webkit-scrollbar-thumb {
   border-width: 2px;
 }
+
+.new-ux-alert {
+  border-radius: 4px;
+  background: rgba(255, 206, 115, 0.1);
+  color: var(--Stroke-Orange, #e38e00);
+  padding: 10px;
+  line-height: 2;
+  font-size: 14px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+.btn-new-ux {
+  background: #e38e00;
+  vertical-align: middle;
+}
