--- a/webview_panels/src/uiCore/theme.scss
+++ b/webview_panels/src/uiCore/theme.scss
@@ -175,3 +175,23 @@ body.vscode-dark {
   background-color: var(--background--base);
   color: var(--text-color--title)
 }
+.modal-title{
+  color: var(--text-color--title);
+
+  .btn{
+    position: absolute;
+    top:10px;
+    right: 5px;
+  }
+
+}
+.modal-body{
+  color: var(--text-color--paragraph, #c4cad2);
+
+}
+.modal-content {
+  border-radius: 8px;
+  background: var(--background--02);
+  border-color: var(--stroke--disable);
+
+}
