feat: added lens code

--- a/new_lineage_panel/src/index.css
+++ b/new_lineage_panel/src/index.css
@@ -172,6 +172,10 @@ body {
   cursor: pointer;
 }
 
+.cursor-default {
+  cursor: default;
+}
+
 .tooltip-container {
   position: relative;
   display: flex;
