--- a/new_lineage_panel/src/index.css
+++ b/new_lineage_panel/src/index.css
@@ -52,6 +52,11 @@ html[data-theme="dark"] {
   --divider-color: #424750;
 }
 
+html[data-theme="dark"] .bs-modal {
+  --bs-modal-bg: #28292c !important;
+  --bs-modal-color: #ffffff !important;
+}
+
 body {
   padding: 0;
   color: var(--text-color);
