--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -420,3 +420,9 @@ $size: 1.2em;
     height: 1rem;
   }
 }
+
+.code_editor {
+  background-color: #082247 !important;
+  padding: 0.5rem;
+  width: 100%;
+}
