--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -421,6 +421,10 @@ $size: 1.2em;
   }
 }
 
+.code_editor_container {
+  background-color: #082247 !important;
+}
+
 .code_editor {
   background-color: #082247 !important;
   padding: 0.5rem;
