--- a/new_lineage_panel/src/components/styles.module.scss
+++ b/new_lineage_panel/src/components/styles.module.scss
@@ -21,8 +21,8 @@
   background: #082247;
 }
 
-.lens_type_badge {
-  background-color: var(--lens-color) !important;
+.views_type_badge {
+  background-color: var(--views-color) !important;
   font-size: 8px;
   padding: 2px;
   width: 12px;
