--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -390,7 +390,7 @@ $size: 1.2em;
   }
 }
 
-.model_lens_type {
+.model_views_type {
   padding: 0.5rem;
   background-color: var(--card-bg);
   border-radius: 6px;
@@ -399,7 +399,7 @@ $size: 1.2em;
   gap: 0.5rem;
 }
 
-.modal_lens_code_container {
+.modal_views_code_container {
   padding: 0.5rem;
   background-color: var(--card-bg);
   border-radius: 6px;
