--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -221,6 +221,20 @@ $size: 1.2em;
     position: absolute;
     top: -6px;
     right: 4px;
+    display: flex;
+    gap: 0.25rem;
+  }
+
+  .column_code_icon {
+    background-color: #082247 !important;
+    padding: 2px;
+    width: 12px;
+    height: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 6px;
+    cursor: default;
   }
 }
 
