fix: code icon hover and hiding issue

--- a/new_lineage_panel/src/components/styles.module.scss
+++ b/new_lineage_panel/src/components/styles.module.scss
@@ -32,6 +32,7 @@
   align-items: center;
   justify-content: center;
   color: #ffffff;
+  cursor: default;
 }
 
 .lineage_legend {
@@ -77,5 +78,5 @@
   align-items: center;
   justify-content: center;
   border-radius: 6px;
-  cursor: default;
+  cursor: pointer;
 }
